[gd_scene load_steps=18 format=3 uid="uid://r13lg50en4gg"]

[ext_resource type="Script" path="res://scenes/ui-scenes/shop-screen(final)/stat-window/stat_upgrade_panel.gd" id="1_2jc0p"]
[ext_resource type="Texture2D" uid="uid://dxfg0ha6ocgcr" path="res://assets/ui/windows/shop_item_slot.png" id="1_4bh5a"]
[ext_resource type="Texture2D" uid="uid://crs3a0ni5u5s5" path="res://assets/ui/windows/shop_item_slot_hover.png" id="2_7utiu"]
[ext_resource type="Texture2D" uid="uid://brcnas123w8tk" path="res://assets/ui/backgrounds/upgrade_meter.png" id="2_ee7do"]
[ext_resource type="Texture2D" uid="uid://dysp8obhbkkoa" path="res://assets/ui/backgrounds/upgrade_meter_frame.png" id="3_qb56s"]
[ext_resource type="FontFile" uid="uid://dxfyisbd2ylri" path="res://assets/fonts/joystix monospace.otf" id="6_60cph"]
[ext_resource type="Texture2D" uid="uid://4diwa16kvpl" path="res://assets/icons/attack_icon.png" id="7_21ekx"]
[ext_resource type="Texture2D" uid="uid://ds0my0p8o3gis" path="res://assets/icons/heart_icon.png" id="8_g41fd"]
[ext_resource type="Texture2D" uid="uid://ddssxp4ebasa1" path="res://assets/icons/def_icon.png" id="9_x5lh0"]
[ext_resource type="Texture2D" uid="uid://cdx4o4f8c6top" path="res://assets/icons/speed_icon.png" id="10_4lnpc"]
[ext_resource type="Texture2D" uid="uid://dqpknnm6dqij6" path="res://assets/ui/windows/item_infor_sprite.png" id="11_4ix3h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01s6u"]
bg_color = Color(0.252028, 0.252028, 0.252028, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y8hh3"]
texture = ExtResource("2_ee7do")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0f0kx"]
texture = ExtResource("3_qb56s")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7s24j"]
load_path = "res://.godot/imported/shop_item_slot.png-b3e26341882ddf689c55c549c43e5b04.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xcyuc"]
load_path = "res://.godot/imported/shop_item_slot.png-b3e26341882ddf689c55c549c43e5b04.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_t3pet"]
load_path = "res://.godot/imported/shop_item_slot.png-b3e26341882ddf689c55c549c43e5b04.ctex"

[node name="StatUpgradePanel" type="Control" node_paths=PackedStringArray("frame_hover_1", "frame_hover_2", "frame_hover_3", "frame_hover_4")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jc0p")
frame_hover_1 = NodePath("ItemFrame1/FrameHover1")
frame_hover_2 = NodePath("ItemFrame2/FrameHover2")
frame_hover_3 = NodePath("ItemFrame3/FrameHover3")
frame_hover_4 = NodePath("ItemFrame4/FrameHover4")
atk_desc = "Enhance your damage output, allowing you to defeat enemies more efficiently."
hp_desc = "Increase your overall vitality, enabling you to withstand more hits in battle."
def_desc = "Strengthen your protective barriers, reducing the damage taken from attacks."
speed_desc = "Boost your agility, allowing you to navigate the battlefield swiftly and dodge enemy strikes."

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.165656, 0.165656, 0.165656, 1)
custom_minimum_size = Vector2(1456, 1080)
layout_mode = 0
offset_left = 464.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ItemFrame1" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 530.0
offset_top = 63.0
offset_right = 730.0
offset_bottom = 263.0
texture = ExtResource("1_4bh5a")

[node name="FrameHover1" type="TextureRect" parent="ItemFrame1"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("2_7utiu")

[node name="AtkLevel" type="ProgressBar" parent="ItemFrame1"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_01s6u")
theme_override_styles/fill = SubResource("StyleBoxTexture_y8hh3")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="barBG" type="ProgressBar" parent="ItemFrame1"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxTexture_0f0kx")
show_percentage = false

[node name="AtkIcon" type="TextureRect" parent="ItemFrame1"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_21ekx")

[node name="HoverBtn" type="Button" parent="ItemFrame1"]
layout_mode = 0
offset_right = 544.0
offset_bottom = 200.0
flat = true

[node name="AtkUpgrade" type="Button" parent="ItemFrame1"]
layout_mode = 0
offset_left = 397.0
offset_top = 121.0
offset_right = 544.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 24
text = "UPGRADE"

[node name="AtkCost" type="Label" parent="ItemFrame1"]
layout_mode = 0
offset_left = 281.0
offset_top = 121.0
offset_right = 321.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 32
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemFrame2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 1259.0
offset_top = 63.0
offset_right = 1459.0
offset_bottom = 263.0
texture = SubResource("CompressedTexture2D_7s24j")

[node name="FrameHover2" type="TextureRect" parent="ItemFrame2"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("2_7utiu")

[node name="HpLevel" type="ProgressBar" parent="ItemFrame2"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_01s6u")
theme_override_styles/fill = SubResource("StyleBoxTexture_y8hh3")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="barBG" type="ProgressBar" parent="ItemFrame2"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxTexture_0f0kx")
show_percentage = false

[node name="HpIcon" type="TextureRect" parent="ItemFrame2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_g41fd")

[node name="HoverBtn2" type="Button" parent="ItemFrame2"]
layout_mode = 0
offset_right = 544.0
offset_bottom = 200.0
flat = true

[node name="HpUpgrade" type="Button" parent="ItemFrame2"]
layout_mode = 0
offset_left = 397.0
offset_top = 121.0
offset_right = 544.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 24
text = "UPGRADE"

[node name="HpCost" type="Label" parent="ItemFrame2"]
layout_mode = 0
offset_left = 291.0
offset_top = 121.0
offset_right = 344.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 32
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemFrame3" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 530.0
offset_top = 469.0
offset_right = 730.0
offset_bottom = 669.0
texture = SubResource("CompressedTexture2D_xcyuc")

[node name="FrameHover3" type="TextureRect" parent="ItemFrame3"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("2_7utiu")

[node name="DefLevel" type="ProgressBar" parent="ItemFrame3"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_01s6u")
theme_override_styles/fill = SubResource("StyleBoxTexture_y8hh3")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="barBG" type="ProgressBar" parent="ItemFrame3"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxTexture_0f0kx")
show_percentage = false

[node name="DefIcon" type="TextureRect" parent="ItemFrame3"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_x5lh0")

[node name="HoverBtn3" type="Button" parent="ItemFrame3"]
layout_mode = 0
offset_right = 544.0
offset_bottom = 200.0
flat = true

[node name="DefUpgrade" type="Button" parent="ItemFrame3"]
layout_mode = 0
offset_left = 397.0
offset_top = 121.0
offset_right = 544.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 24
text = "UPGRADE"

[node name="DefCost" type="Label" parent="ItemFrame3"]
layout_mode = 0
offset_left = 281.0
offset_top = 121.0
offset_right = 334.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 32
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemFrame4" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 1259.0
offset_top = 469.0
offset_right = 1459.0
offset_bottom = 669.0
texture = SubResource("CompressedTexture2D_t3pet")

[node name="FrameHover4" type="TextureRect" parent="ItemFrame4"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("2_7utiu")

[node name="SpeedLevel" type="ProgressBar" parent="ItemFrame4"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_01s6u")
theme_override_styles/fill = SubResource("StyleBoxTexture_y8hh3")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="barBG" type="ProgressBar" parent="ItemFrame4"]
custom_minimum_size = Vector2(160, 16)
layout_mode = 0
offset_left = 224.0
offset_top = 21.0
offset_right = 384.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxTexture_0f0kx")
show_percentage = false

[node name="SpeedIcon" type="TextureRect" parent="ItemFrame4"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_4lnpc")

[node name="HoverBtn4" type="Button" parent="ItemFrame4"]
layout_mode = 0
offset_right = 544.0
offset_bottom = 200.0
flat = true

[node name="SpeedUpgrade" type="Button" parent="ItemFrame4"]
layout_mode = 0
offset_left = 397.0
offset_top = 121.0
offset_right = 544.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 24
text = "UPGRADE"

[node name="SpeedCost" type="Label" parent="ItemFrame4"]
layout_mode = 0
offset_left = 291.0
offset_top = 121.0
offset_right = 344.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 32
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDesc" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 786.0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("11_4ix3h")

[node name="Statname" type="Label" parent="ItemDesc"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 196.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 32

[node name="StatEffect" type="Label" parent="ItemDesc"]
layout_mode = 0
offset_left = 40.0
offset_top = 113.0
offset_right = 196.0
offset_bottom = 152.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 32

[node name="StatDesc" type="Label" parent="ItemDesc"]
layout_mode = 0
offset_left = 40.0
offset_top = 178.0
offset_right = 1442.0
offset_bottom = 286.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_60cph")
theme_override_font_sizes/font_size = 24
autowrap_mode = 2

[connection signal="mouse_entered" from="ItemFrame1/HoverBtn" to="." method="item1_entered"]
[connection signal="mouse_exited" from="ItemFrame1/HoverBtn" to="." method="item1_exited"]
[connection signal="pressed" from="ItemFrame1/AtkUpgrade" to="." method="_on_atk_upgrade_pressed"]
[connection signal="mouse_entered" from="ItemFrame2/HoverBtn2" to="." method="item2_entered"]
[connection signal="mouse_exited" from="ItemFrame2/HoverBtn2" to="." method="item2_exited"]
[connection signal="pressed" from="ItemFrame2/HpUpgrade" to="." method="_on_hp_upgrade_pressed"]
[connection signal="mouse_entered" from="ItemFrame3/HoverBtn3" to="." method="item3_entered"]
[connection signal="mouse_exited" from="ItemFrame3/HoverBtn3" to="." method="item3_exited"]
[connection signal="pressed" from="ItemFrame3/DefUpgrade" to="." method="_on_def_upgrade_pressed"]
[connection signal="mouse_entered" from="ItemFrame4/HoverBtn4" to="." method="item4_entered"]
[connection signal="mouse_exited" from="ItemFrame4/HoverBtn4" to="." method="item4_exited"]
[connection signal="pressed" from="ItemFrame4/SpeedUpgrade" to="." method="_on_speed_upgrade_pressed"]
